# mDNSResponder

./: CMakeLists.txt
mDNSCore/: DNSCommon.c  DNSCommon.h
mDNSShared/: dnssd_clientshim.c  mDNSDebug.c
mDNSWindows/: mDNSWin32.c
